# CARE

./: .gitignore  CMakeLists.txt  README.md
GDBFI/: Disassembler.py  Expr.py  FIWorker.py  gdbfi.py
GDBFI/pintool/: makefile.rules  pintool.cpp
frontend/: CMakeLists.txt  Care.cpp  Care.h  CarePass.cpp  CarePass.h  DbgInfo.cpp  DbgInfo.h  LivenessAnalysis.cpp  LivenessAnalysis.h  RKB.cpp  RKB.h
include/: pb.h  tb.h
pass/: CMakeLists.txt  Care.cpp  Care.h  DbgInfo.cpp  DbgInfo.h
rtable/: CMakeLists.txt  README.md  care.proto  pb.cpp  tb.cpp
runtime/: ABI.map  CMakeLists.txt  care.c  care.h  dw.c  dw.h  err.h  errx.c  errx.h  handler.c  reg.map  reg_rw.def  types.h  udis.c  udis.h  unwind.c  util.c  util.h
test/frontend/: Makefile  libCAREsmooth.bc  smooth.c  smooth.ll  smooth_care  smooth_care.asm  smooth_care.ll  smooth_dbg.ll  smooth_g  smooth_g.asm  smooth_g.ll  smooth_g_6.0  smooth_g_6.0.ll  static.ll  sum.c  sum.ll
test/frontend/GTCP_Simple/: bench_gtc.h  bench_gtc_opt.h  bench_gtc_port.h  chargei.report  collision.c  get_2d_communicator.c  main.c  poisson.report  poisson_bench.c  push.c  push2.c  remap.c  remap_quad.c  setup.c  setup.d  smooth.c  smooth_simple.c
test/frontend/GTCP_Simple/.svn/: wc.db
test/frontend/GTCP_Simple/input/: C.txt
test/runtime/: dw_example.c  dwarfdump.c  hash.c  hello  hello.c  pbtest.cc  pbtest_c.c  pointer.c  test.tb  ud.c  wrapper.c
test/runtime/simple/: main.c  recover.c  static.c
tools/FReplay/: App.py  Controller.py  Expr.py  FIWorker.py  FReplay.py  Fault.py
tools/GDBFI/: Controller.py  Disassembler.py  Expr.py  FIWorker.py  Fault.py  Framework.py  README.md  gdbfi.py
tools/GDBFI/pintool/: pintool.cpp
tools/GDBFI/runtime/: gdbfi.c
tools/GDBFI/test/: array  gdbfi.profile  hello
tools/MPIFI/: MPIFI.c  mpifi.py
tools/counter/: CMakeLists.txt  Counter.cpp  Counter.h
tools/counter/Benchmarks/: gtcp.ll  hpccg-O3.ll  hpccg.ll  lulesh-O3.ll  lulesh.ll  miniFE.ll  miniMD-O1.ll  miniMD-O3.ll
tools/counter/include/: Counter.h
tools/counter/src/: CMakeLists.txt  Counter.cpp
tools/counter/test/: Makefile  libCAREsmooth.bc  smooth.ll  smooth_care.ll  static.c  static.ll  sum.ll  type.c
tools/counter/test/GTCP_Simple/: .smooth.c.swp  .smooth.ll.swp  Makefile  RngStream.c  calc_moments.c  chargei_reduction.c  diagnosis.c  field.c  output.c  poisson.c  report  report2  restart_fortran.c  restart_ion.c  shifti.c
tools/counter/test/GTCP_Simple/input/: A.txt  gtcp.xml.bak
tools/jupyter/: BenighAnalysis.ipynb  CAREExprAnalysis.ipynb  failed.ipynb  fault_parser.ipynb  gdbfi_profile_reader.ipynb  get_timing_injections.ipynb  prepare_mpi_faults.ipynb  recovery_time.ipynb
